# iown-homecontrol

./: .editorconfig  .gitattributes  .gitignore  404.html  Commands.md  ENCRYPTION.md  LinkLayer.md  README.md  Radio.md  desktop.ini  github.code-workspace  index.html  keywords.txt  library.json  library.properties  mkdocs.yml  platformio.ini  pyproject.toml  sitemap.xml
.devcontainer/: configuration.yaml  devcontainer.json  devcontainer_ESP-IDF.json  devcontainer_ha-tahoma.json
.devcontainer/schema/: devContainer.schema.json
.github/: CODEOWNERS  CODEOWNERS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  GOVERNANCE.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md  dependabot.yml  labeler.yml
.github/DISCUSSION_TEMPLATE/: README.md  announcements.yml
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml  BUG-REPORT.yml  README.md  config.yml  issue_template.md
.github/workflows/: arduino-build-sketch.yaml  arduino-lint.yml  codeql.yml  label.yml  mkdocs-deploy.yml  mkdocs-spell-check.yml  mkdocs.yml  platformio.yml  stale.yml  static.yml
GNURadio/: epy_block_0.py
assets/javascripts/: bundle.ebd0bdb7.min.js
assets/stylesheets/: extra.css
commands/: index.html
devices/: index.html
devices/Velux/: index.html
devices/velux/: index.html
docs/: AES.md  BoxTypes.md  COMMANDS.md  Commands.md  DEVICES-oem.md  LinkLayer.md  LoRa32.md  MicroPython.md  PARAMETER.md  RADIO-CC1021.md  RADIO-RTLSDR.md  README.md  commands.md  data.md  devices.md  emulation-qemu-static.md  firmware.md  index.md  iohc.ksy  kizos_images.md  kizos_linux.md  kizos_luajit.md  kizos_notes.md  kizos_re.md  linklayer.md  oem.md  radio-rtlsdr.md  radio.md  rtlsdr.md
docs/assets/: README.md
docs/boards/: CC1101_Registers-Comparison.xlsx
docs/firmware/: Animeo-IpIo-Atmel1284P.hex  Animeo-IpIo-Atmel1284P.yaml  Somfy-Nina-5125750A22.sec  Somfy-SetGoIo-5102404A042V2-0x8008000.seb  Somfy-SetGoIo-5102404A042V2.sec  Somfy-SkitterIo-5068556X0300.seb  Somfy-WeatherStationM13-1.1.12.hex  Somfy-WeatherStationM8-1.1.12.hex  Velux-KLxn00-EFM32GG-Bootloader-UART.out
docs/infra/: overkiz.com-subdomains.html
docs/parameter/: IoHomecontrold.lua  README.md  idealrf-utils.luac  internald.lua  iohcd.unesc_printf.decomp.lua  locald.lua  luajit-convertNested.py
docs/reference/: EMS2.md  IoHomecontrold.md  Si446x-Inside-EZRadioPRO.md  daemon.xlsx  deamon.o-IdaProExport.tsv  ebe32.xlsx  io-Homecontrol-CommandIDs.ts  io-homecontrol-template.sqlite  j-link-events.evtx  packet_types.txt
extras/: ATmega1284P.atdf  AtlanticElectricalHeaterWithAdjustableTemperatureSetpoint.java  BoxTypes.csv  Control4Decrypt.cs  Somfy - SDN - Address Converter - V2.xlsx  const-3.ts  ebe32.xlsx  io-Homecontrol-CommandIDs.ts  j-link-events.evtx  lvtl1797395740.rsc  lvtl1797395740.rsc.bak  owsd  packet_types.txt  ramsesd
extras/ADF7022/: ADF7022.extracted_chunk.unk  ADF7022_BBRAMdefaults 07-07-10.h  ADF7022_BBRAMdefaults 25-3-09.h  adf7020config.ini  adsimlinktestfile.ini
extras/GNURadio/: io-homecontrol-allc.grc  io_home_demod.grc  io_homecontrol_slicer.grc
extras/IDA_Pro/: Batch_Si4461.txt  radio_config_Si4461-2.h  radio_config_Si4461.h
extras/KizOS/: Main_Controller_v1.1.9.1709-kernel.kconfig
extras/MicroPython/: SX1276_Tx.py  iown_config.py
extras/OverkizCloud/: Netatmo.jsonc  OVP_OGP_UPDATE.json  Somfy_APIKeys.xml  const-2.ts  equipement.properties.service-2.ts  somfy.com-subdomains.html
extras/RTL-SDR/: rtlsdr-2820-820T2.dump
extras/SVD/: STM32F101.mmap  example.svd
extras/SimuLiveIn2/: Manifest  app_overkiz_installer.p12  server.pem
extras/Somfy-RS485/: somfy-SDN-Address_Converter-V2.xlsx
extras/Somfy-RTS-KernelModule/: rf-core.ko  rf-sx1243.ko
extras/Velux-EFM32GG-Bootloader-UART/: README.md  Use of typedef with preprocessor in IAR. - Silicon Labs.mhtml
extras/certificates/: CA_intermediate.crt  README.md  ca.crt  flexom_pro_1.18-Cert2  overkiz_tahoma_converter_project_priv.xml
extras/kizos/: Animeo.md  at91-gpio  bpk_yaraRule.yar  io.sh  overkiz_tahoma_converter_library_pub.pem  overkiz_tahoma_converter_library_pub.xml  overkiz_tahoma_converter_project_priv.pem  overkiz_tahoma_converter_project_priv.xml
extras/servego/: SNIPPETS.md
firmware/: index.html
include/: esp32_api.h  esp32_api_spi.h  iown.h  iown_defs.h  iown_frame.h  iown_mac.h  iown_node_types.h
lib/: README.md
lib/LoRa32/: README.md  library.json
linklayer/: index.html
parameter/: index.html
parameter/database/: index.html
radio/: index.html
radio-cc1021/: index.html
radio-rtlsdr/: index.html
reference/EMS2/: index.html
reference/Si446x/: index.html  registers-Si4467-A0.html
renode/: DummySPI_SI446X.cs  Tahoma.resc  TahomaBoard.repl  readme.txt
scripts/: Download-Files.ps1  Import-CertFiles.ps1  Iown-AES.py  Iown-IoHexFrameParser.py  Iown-ioCrypto.py  PythonScriptTemplate.py  PythonTemplate.py  __init__.py  aes-2.py  aes.py  converter.html  crc.cmd  fact_extractor.py  find-data.py  ghex2bin.py  invert-binary.js  io-homecontrol.ksy  ioCrypto.py  ioHexFrameParser.py  iohomecontrol.py  kaitai-decoder.py  mvSetGoXml.sh  pyvlx-monitor.py  pyvlx.yaml  rtl_433.io-homecontrol.conf  test.py  tools.js
scripts/IDAPro/: stm32l-example.cfg
scripts/IDA_Pro/: Batch_Si4461.txt  iownloader.md  radio_config_Si4461-2.h  radio_config_Si4461.h
scripts/MicroPython/: iown_sx1276_tx.py
scripts/SVD/: ARMCM3.svd  ARM_Example.svd  ATmega1284P-iown.atdf  CMSDK_CM3.svd  STM32F101-iown.json  STM32F101-iown_v2.svd  STM32F101_iown.svd  STM32F101xx.svd
scripts/aes/: aes.c  aes.h
scripts/renode/: DummySPI_SI446X.cs  README.md  TahomaBoard.repl  TahomaCpu.repl
scripts/rtl_433/: rtl_433-msvc-nightly-rtlsdrblog.7z  rtl_433.conf
search/: search_index.json
src/: IoHome.cpp  IoHome.h  esp32_api.cpp  esp32_api_spi.cpp  esp32_utils.cpp  iown_mac.cpp  main.cpp
src/skitter_io/: ActuatorProfileCopiedePath13.as  ActuatorProfileCopiedePath132.as  ActuatorProfileCopiedePath17.as  ActuatorProfileCopiedePath172.as  ActuatorProfileCopiedePath9.as  ActuatorProfileCopiedePath92.as  ActuatorProfileDoorLockDisable.as  (+367 more)
(+2998 files in other folders)
